Added design changes

--- a/about_us.css
+++ b/about_us.css
@@ -1,4 +1,13 @@
 #about_top_section {
-    background-image: url('images/people-motion-walk-asia-professional-together-1179849-pxhere.com.jpg');
-    height: 75vh;
+    background-image: linear-gradient(to right, rgb(63, 87, 104) 40%, rgba(63, 87, 104, 0.027)), url('images/people-motion-walk-asia-professional-together-1179849-pxhere.com.jpg');
+    background-position-x: 0, 30rem;
+    background-position-y: 0, -15rem;
 }
+
+@media (max-width:750px) {
+
+    #about_top_section {
+      background-image: url('images/people-motion-walk-asia-professional-together-1179849-pxhere.com.jpg');
+    }
+  
+  }
