Optimized images in non-home pages

--- a/about_us.css
+++ b/about_us.css
@@ -1,5 +1,5 @@
 #about_top_section {
-    background-image: linear-gradient(to right, rgb(63, 87, 104) 40%, rgba(63, 87, 104, 0.027)), url('images/people-motion-walk-asia-professional-together-1179849-pxhere.com.jpg');
+    background-image: linear-gradient(to right, rgb(63, 87, 104) 40%, rgba(63, 87, 104, 0.027)), url('images/about_us.webp');
     background-position-x: 0, 30rem;
     background-position-y: 0, -15rem;
 }
@@ -7,7 +7,8 @@
 @media (max-width:750px) {
 
     #about_top_section {
-      background-image: url('images/people-motion-walk-asia-professional-together-1179849-pxhere.com.jpg');
+      background-image: url('images/about_us.webp');
+      background-position: center;
     }
   
   }
