--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ p {
   line-height: 1.75rem;
 }
 
+select {
+  height: 3rem;
+}
+
 html {
   font-size: 16px;
   font-family: "Poppins", sans-serif;
@@ -439,7 +443,7 @@ textarea {
   font-size: 1.15rem;
 }
 
-#breadcrumb a {
+#breadcrumb a,#breadcrumb img {
   color: red;
 }
 
@@ -451,6 +455,17 @@ textarea {
 .chevron_font {
   width: 0.5rem;
   margin: 0 0.25rem;
+}
+
+.page_form {
+  width: min(47rem,90%);
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3rem;
+  border: 2px solid gray;
+  border-radius: .3rem;
+  text-align: left;
+  padding: 2rem;
 }
 
 @media (max-width: 1300px) {
