--- a/services.css
+++ b/services.css
@@ -26,6 +26,7 @@
   margin-top: auto;
   margin-bottom: 0.5rem;
   text-align: center;
+  color: white;
 }
 
 #personal_care_service {
@@ -59,7 +60,6 @@ p a {
 div ul li {
   list-style: inside;
 }
-
 
 @media (max-width:750px) {
 
