--- a/services/service.css
+++ b/services/service.css
@@ -1,6 +1,8 @@
 h1 {
-  text-decoration: underline;
-  color: var(--tertiary-text-color);
+  /* text-decoration: underline; */
+  color: var(--primary-text-color-red);
+  font-size: 2.35rem;
+  margin-top: -1rem;
 }
 
 h2 {
@@ -12,6 +14,39 @@ a {
   color: var(--primary-text-color-red);
 }
 
+li {
+  list-style: none;
+  margin-bottom: 1rem;
+}
+
+li img {
+  margin-right: 0.5rem;
+}
+
+#service_description {
+  display: flex;
+  padding: 5rem 6rem;
+}
+
+#service_left {
+  /* background-image: url("../images/service_background_pattern.svg"); */
+  width: 45%;
+  /* background-position-y: 100%; */
+  /* background-repeat: no-repeat; */
+  display: flex;
+  /* align-items: center; */
+  /* justify-content: center; */
+}
+
+#service_left img {
+  width: 90%;
+  /* opacity: .1; */
+}
+
+#service_right {
+  padding-left: 2rem;
+}
+
 #service_sublist {
   columns: 2;
   -webkit-columns: 2;
@@ -19,6 +54,33 @@ a {
 }
 
 #contact_us_link {
-    margin-top: 5rem;
-    /* margin-bottom: 2rem; */
+  margin-top: 3rem;
+  /* margin-bottom: 2rem; */
+}
+
+#service_contact {
+  display: flex;
+  padding: 5rem 7rem;
+}
+
+#service_contact_left {
+  width: 50%;
+}
+
+#service_contact_right {
+  width: 50%;
+}
+
+textarea {
+  min-height: 10rem;
+}
+
+@media (max-width: 750px) {
+  #service_contact {
+    flex-direction: column;
+  }
+
+  #service_contact > * {
+    width: 100%;
+  }
 }
