--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   --primary-text-color-green: #77bb3c;
   --secondary-text-color: gray;
   --tertiary-text-color: #314351;
-  --primary-bg-color: #f8f8f8;
+  --primary-bg-color: #f4f4f4;
   --secondary-bg-color: #e12454;
   --tertiary-bg-color: #77bb3c;
   --tertiary-bg-color-blue: #314351;
@@ -541,6 +541,7 @@ textarea {
 
   #newsletter_subscribe_left {
     width: 100%;
+    height: 50%;
   }
 
   #footer_bottom {
