Made home top section smaller

--- a/home.css
+++ b/home.css
@@ -29,7 +29,7 @@ form {
   height: 22.5rem;
   color: var(--tertiary-text-color-red);
   margin-top: 5rem;
-  margin-left: 9.5rem;
+  margin-left: 5rem;
   border-radius: 0.3rem;
 }
 
@@ -275,7 +275,6 @@ form {
   }
 
   #home_top_section_text {
-    position: static;
     margin: 0;
   }
 
@@ -300,19 +299,38 @@ form {
     /* width: min(5rem, 90%); */
   }
 
-  .service>img {
+  .service > img {
     height: 19rem;
   }
 }
 
 @media (max-width: 750px) {
+  #home_top_section {
+    height: 22rem;
+  }
 
   #home_top_section_text {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 70%;
-    padding-bottom: 1rem;
+    height: 95%;
+    padding: .5rem .5rem 1rem .5rem; 
+  }
+
+  #home_top_section_text h2{
+    margin: 0;
+  }
+
+  #home_top_section_text p {
+    margin: .5rem;
+  }
+
+  #middle_section_1 {
+    padding-top: 0;
+  }
+
+  #middle_section_1 > p:nth-of-type(1) {
+    margin: 0;
   }
 
   .service > img {
