--- a/services.css
+++ b/services.css
@@ -64,7 +64,7 @@ div ul li {
 @media (max-width:750px) {
 
   #services_top_section {
-    background-image: url('images/services.webp');
+    background-image: linear-gradient(to top, rgb(63, 87, 104) 10%, rgba(63, 87, 104, 0.027)), url('images/services.webp');
   }
 
 }
