--- a/services/service.css
+++ b/services/service.css
@@ -5,9 +5,11 @@ h1 {
   margin-top: -1rem;
 }
 
-h2 {
+#service_right h2 {
   font-size: 1.5rem;
+  font-weight: 600;
   color: black;
+  margin-bottom: 1rem;
 }
 
 a {
@@ -28,24 +30,15 @@ li img {
   padding: 5rem 6rem;
 }
 
-#service_left {
-  /* background-image: url("../images/service_background_pattern.svg"); */
-  width: 45%;
-  /* background-position-y: 100%; */
-  /* background-repeat: no-repeat; */
-  display: flex;
-  /* align-items: center; */
-  /* justify-content: center; */
-}
-
 #service_left img {
-  width: 90%;
+  width: 100%;
   /* opacity: .1; */
 }
 
 #service_right {
   padding-left: 2rem;
 }
+
 
 #service_sublist {
   columns: 2;
@@ -65,6 +58,7 @@ li img {
 
 #service_contact_left {
   width: 50%;
+  padding-right: 1rem;
 }
 
 #service_contact_right {
@@ -73,6 +67,40 @@ li img {
 
 textarea {
   min-height: 10rem;
+}
+
+@media (max-width:1300px) {
+
+  #service_description {
+    padding: 2rem 1rem;
+    align-items: center;
+  }
+
+}
+
+@media (max-width: 950px) {
+  #service_description {
+    flex-direction: column;
+  }
+
+  #service_left  {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+
+  #service_left img {
+    width: 100%;
+    border-radius: 0;
+  }
+
+  #service_contact {
+    padding: 5rem 2rem;
+  }
+
+  #service_contact_left {
+    width: 40%;
+  }
+
 }
 
 @media (max-width: 750px) {
