--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  min-width: 30rem;
+  min-width: 320px;
 }
 
 main {
@@ -204,6 +204,10 @@ footer {
   display: inline;
   margin-right: 1rem;
 }
+
+/* input[type="radio"] {
+  display: inline;
+} */
 
 #services {
   display: grid;
@@ -373,6 +377,7 @@ footer {
 
 .top_section h1 {
   margin-left: 10rem;
+  color: white;
 }
 
 .form_row {
@@ -435,7 +440,7 @@ textarea {
   background-position: center;
   margin-left: 0;
   height: 3.5rem;
-  width: 4rem;
+  width: 5rem;
   border: none;
   background-color: var(--secondary-bg-color);
   color: white; /*TODO: Remove after replacing text with font */
@@ -508,11 +513,16 @@ textarea {
     flex-direction: column;
   }
 
+  #newsletter_subscribe_left {
+    padding: 1rem;
+  }
+
   #footer_bottom {
     flex-direction: column;
     flex-wrap: wrap;
     height: 30rem;
   }
+
 }
 
 @media (max-width: 750px) {
@@ -579,6 +589,7 @@ textarea {
   #newsletter_subscribe_left {
     width: 100%;
     height: 50%;
+    padding:3rem 2rem;
   }
 
   #footer_bottom {
@@ -604,7 +615,7 @@ textarea {
   }
 
   #footer_bottom_mobile .newsletter_subscribe_form input[type="text"] {
-    width: 21rem;
+    width: 17rem;
   }
 
   main .top_section {
@@ -633,7 +644,7 @@ textarea {
 
 @media (max-width: 550px) {
   main {
-    padding: 0.5rem 0.25rem 0 0.25rem;
+    padding: 0.5rem 1rem 0 0.25rem;
   }
 
   #newsletter_subscribe_right {
