--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ body {
 }
 
 main {
-  padding: 0.5rem 1.5rem 0 1.5rem;
+  /* padding: 0.5rem 0 0 0; */
+  padding-top: .5rem;
   /* min-width: 30rem; */
 }
 
@@ -124,7 +125,7 @@ footer {
 #logo {
   display: flex;
   height: 6rem;
-  margin-left: 7rem;
+  margin-left: 3rem;
 }
 
 #logo img {
