--- a/home.css
+++ b/home.css
@@ -14,11 +14,13 @@ form {
 
 #home_top_section {
   display: flex;
-  height: 41.5rem;
+  /* height: 41.5rem; */
+  min-height: 38rem;
+  height: calc(100vh - 7rem);
   background-image: url("images/grandmother-talking-with-granddaughter.webp");
-  /* background-size: cover; */
   background-repeat: no-repeat;
-  background-size: 100%;
+  /* background-size: 100%; */
+  background-size: cover;
   color: white;
 }
 
@@ -237,7 +239,9 @@ form {
 
 @media (max-width: 1300px) {
   #home_top_section {
-    height: 25rem;
+    height: 33rem;
+    min-height: 25rem;
+    /* height: calc(100vh - 7rem); */
   }
 
   #home_top_section_text {
@@ -314,16 +318,16 @@ form {
     flex-direction: column;
     justify-content: center;
     height: 95%;
-    padding: .5rem .5rem 1rem .5rem; 
+    padding: 0.5rem 0.5rem 1rem 0.5rem;
   }
 
-  #home_top_section_text h2{
+  #home_top_section_text h2 {
     margin: 0;
     font-size: 1.75rem;
   }
 
   #home_top_section_text p {
-    margin: .5rem;
+    margin: 0.5rem;
   }
 
   #middle_section_1 {
@@ -334,9 +338,9 @@ form {
     margin: 0;
   }
 
-  #middle_section_1 h2{
+  #middle_section_1 h2 {
     margin: 0;
-    margin-bottom: .2rem;
+    margin-bottom: 0.2rem;
   }
 
   .service > img {
