--- a/home.css
+++ b/home.css
@@ -16,6 +16,7 @@ form {
   display: flex;
   /* height: 41.5rem; */
   min-height: 38rem;
+  max-height: 48rem;
   height: calc(100vh - 7rem);
   background-image: url("images/grandmother-talking-with-granddaughter.webp");
   background-repeat: no-repeat;
@@ -151,7 +152,7 @@ form {
 }
 
 .middle_section {
-  padding: 4rem 0;
+  padding: 1rem 0;
 }
 
 .home_action {
